2005-09-11  Uwe Kindler  <uwe_kindler@web.de>

	* cdl/can_mcf52xx.cdl Default message buffer configuration 
	  changed. Message buffer 13 now is transmit message buffer.
	  Message buffers 14 and 15 are no receive message buffers
	  for all standard and extended frames.
	  
	* src/can_mcf52xx.c Driver partly rewritten. Support for message 
	  filtering added. Message buffer handling added. Several bugs 
	  fixed. Support added for configuration options
	  CYG_IO_SET_CONFIG_CAN_REMOTE_BUF
	  CYG_IO_SET_CONFIG_CAN_FILTER_MSG
	  CYG_IO_SET_CONFIG_CAN_FILTER_ALL
	  CYG_IO_SET_CONFIG_CAN_MODE
	  CYG_IO_GET_CONFIG_CAN_STATE
	  CYG_IO_GET_CONFIG_CAN_MSGBUF_INFO
	  CYG_IO_GET_CONFIG_CAN_HDI
	  
	* tests/flexcan_filter.c Test of message filtering addded
	* tests/flexcan_wake.c Test of mode setting and standby mode of
	  FlexCAN module added.
	
2005-05-24  Uwe Kindler  <uwe_kindler@web.de>

	* mcf52xx FlexCAN driver package created

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros